<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.StartupFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="137dp"
            android:layout_height="137dp"
            android:layout_marginTop="168dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_logo_new_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/djb_stinky_marker"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/shape_rect_white_8"
            android:clickable="true"
            android:fontFamily="@font/djb_stinky_marker"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/shape_rect_orange_8"
            android:clickable="true"
            android:fontFamily="@font/djb_stinky_marker"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>